# learning

./: .gitignore  README.md
Base-C/: README.md
CS-OSSU/: README.md
Cpp/: .gitignore
Cpp/GameDev.tv-UE4-w-Cpp/: .gitignore
Cpp/circle05s/: .gitignore
Cpp/wordsearch/: word.cpp
Django/1 HTML/: Test.html  attributes.html  basics.html  forms2.html  tables.html
Django/3 Bootstrap/: 2aforms.html  final.html
GoLang/: base2dec.go  base2dec_test.go  caesar  caesar.go  dec2base.go  dec2base_test.go  fibonacci.go  fibonacci_test.go  findnum.go  findnum_test.go  stringreverse.go  stringreverse_test.go
Haskell/: .gitignore
Haskell/Directory/: direct  direct.hs
Haskell/HelloWorld/: hello
Haskell/SystemInfo/: system  system.hs
Haskell/WebAppSysEnv/: Main.hs
Haskell/Yesod/: Main.hs
Haskell/httpconduit/: Main.hs  simple.hs
Haskell/time-date/: dnt
IUseArchBtw/: alacritty.yml
IUseArchBtw/waybar/: config
Java/BlockChain/: Block.java  Main.java
Java/japplet/: HelloJava.java
Java/screenshot/: ScreenShot.java
LinuxConfigs/: README.md
LinuxConfigs/sway/: config
Notes/PEH/: node.xml  notebook.nbk
Notes/Projects/: node.xml  notebook.nbk
PHP/: evenorodd.php  sqlaccess.php  sum.php
Projects/: node.xml
Py/: .gitignore
Py/dikscord/: 332  spam1.py  spam2.py  spammer.py
RTin1wknd/: .gitignore  detect.h  inOneWeekend  ppm.cpp  ray.h  shrt.sh  vec3.h
Rust/bevy-snake/: Cargo.toml
Rust/bevy-squares/: Cargo.toml
Rust/bevy-trial/: Cargo.toml
Rust/whitenoise/: Cargo.toml
Rust/whitenoise/src/: lib.rs
SQL/: insert.sql  musictable.sql
(+194 files in other folders)
