[package]
name = "whitenoise"
version = "0.1.0"
authors = ["SFD-411 <yudodis2mehuh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.0.1"
rand = "0.3"

[lib]
name = "whitenoise"
crate-type = ["cdylib"]
